--- a/src/final/css/style.css
+++ b/src/final/css/style.css
@@ -67,7 +67,7 @@ a:active, a:hover {
 	width: 100%;
 	height: 250px;
 	overflow: hidden;
-	background:url('img/banner.jpg') no-repeat;
+	background:url('../img/banner.jpg') no-repeat;
 	background-size: 100%;
 }
 
@@ -152,5 +152,14 @@ p {
 	color: #777;
 	font-size: 18px;
 	line-height: 26px;
-	
 }
+
+.example-code {
+	background: #333;
+	color: white;
+	padding: 10px;
+	border-radius: 10px;
+	margin-top: 20px;
+}
+
+
