--- a/src/confident_web_design/final/css/style.css
+++ b/src/confident_web_design/final/css/style.css
@@ -63,6 +63,10 @@ a:active, a:hover {
 	color: #333;
 	font-size: 18px;
 }
+
+#quick-menu ul {
+	list-style: none;
+}
 #header {
 	width: 100%;
 	height: 250px;
