--- a/src/confident_web_design/final/css/style.css
+++ b/src/confident_web_design/final/css/style.css
@@ -23,8 +23,8 @@ body {
 	width: 100%;
 	list-style: none;
 	text-align: center;
-	padding 0px;
-	margin 0px;
+	padding: 0px;
+	margin: 0px;
 
 }
 
@@ -138,7 +138,7 @@ table, td, th, dl, dt, dd {
 	border: none;
 	background: #1998E2;
 	color: #fff;
-	text-size: 14;
+	font-size: 14pt;
 }
 
 .code-show-button:hover {
